# rachmaninov

./: PHILOSOPHICAL_FOUNDATIONS.md  README.md  README_PROFESSOR.md  goals.json  pyproject.toml
.wiki/ai/: file_hashes.json  wiki.trie
gantt_processor/: processor.py
gantt_processor/ingestors/: get_calendar.py  get_git.py
rachmaninov/: __init__.py  actor.py  cli.py  dream.py  mcp.py  models.py  ontology.py  ontology_personal.py  planner.py  wiki.py
